# parallel-and-concurrent-programming-in-haskell

./: .gitignore  LICENSE  README.md  parallel-and-concurrent-programming-in-haskell.cabal
kmeans/: Main.hs  Types.hs
kmeans/assets/: index.html  kmeans.js
pings/: Main.hs
src/: Kmeans.hs  Main.hs  Pings.hs  Prelude.hs  Random.hs  Sudoku.hs
src/Prelude/: List.hs
sudoku/: Main.hs
