-- Initial parallel-and-concurrent-programming-in-haskell.cabal generated
-- by cabal init.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                parallel-and-concurrent-programming-in-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dan Brooks
maintainer:          dmbrooks@live.co.uk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library
  build-depends:       aeson
                     , array
                     , base
                     , protolude
                     , random
                     , text
                     , time
  hs-source-dirs:      src
  exposed-modules:     Kmeans
                     , Prelude
                     , Prelude.List
                     , Sudoku
  other-modules:       Random
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , RecordWildCards
  default-language:    Haskell2010

executable kmeans
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -Werror -threaded
  build-depends:       base
                     , aeson
                     , parallel-and-concurrent-programming-in-haskell
                     , protolude
                     , servant
                     , servant-server
                     , warp
  hs-source-dirs:      kmeans
  extensions:          DataKinds
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , RecordWildCards
                     , TypeOperators
  default-language:    Haskell2010

executable sudoku
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -Werror -threaded
  build-depends:       deepseq
                     , parallel
                     , parallel-and-concurrent-programming-in-haskell
                     , protolude
                     , text
  hs-source-dirs:      sudoku
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
  default-language:    Haskell2010
